# LC3

./: .gitignore  ChangeLog.md  LC3.cabal  README.md  pkg.nix  result
src/: Main.hs
